<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_scan_qr">

    <View
        android:id="@+id/top_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/qr_code_title_tv"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qr_code_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/noto_sans_armenian_bold"
        android:text="@string/qr_code"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_margin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qr_code_body_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/noto_sans_armenian_regular"
        android:text="@string/qr_body_text"
        android:textAlignment="center"
        android:textColor="@color/white_70_opacity"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_code_title_tv" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/qr_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/ic_qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_code_body_tv"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.53" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scan_tv"
        style="@style/white_filled_big_button_style"
        android:layout_height="0dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toTopOf="@id/info_undp_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_iv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/info_undp_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:fontFamily="@font/noto_sans_armenian_regular"
        android:text="@string/info_undp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_10"
        app:layout_constraintBottom_toTopOf="@id/terms_of_use_tv"
        app:layout_constraintEnd_toStartOf="@id/undp_logo_iv"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/undp_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:src="@drawable/undp_logo"
        app:layout_constraintBottom_toBottomOf="@id/info_undp_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/terms_of_use_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/noto_sans_armenian_regular"
        android:text="@string/terms_of_use"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>