<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/light_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/by_name_surname_tv"
        style="@style/TextView.Primary.Regular.Size16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:paddingVertical="18dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:text="@string/by_name_surname"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/light_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/by_name_surname_birthdate_tv"
        style="@style/TextView.Primary.Regular.Size16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:paddingVertical="18dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:text="@string/by_name_surname_birthdate"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/light_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/by_social_card_or_passport_tv"
        style="@style/TextView.Primary.Regular.Size16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="31dp"
        android:paddingVertical="18dp"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:text="@string/by_social_card_or_passport"/>

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/light_grey" />

</androidx.appcompat.widget.LinearLayoutCompat>