<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/noto_sans_armenian_regular"
        android:text="@string/terms_of_use_header"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_13" />

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="11dp"
        android:background="@color/white"
        android:elevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="30dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/standard_margin"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_armenian_regular"
                    android:text="@string/terms_of_use_part_1"
                    android:textColor="@color/silver"
                    android:textSize="@dimen/text_size_15" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/noto_sans_armenian_semibold"
                    android:text="@string/terms_of_use_part_2"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_15" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>