<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile_image"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameSureName"
        style="@style/TextView.Primary.SemiBold.Size17"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        tools:text="Աննա Ստեփանյան" />

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/standard_margin_16"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="@dimen/standard_margin_16"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/standard_margin_16"
            android:paddingTop="32dp"
            android:paddingEnd="@dimen/standard_margin_16"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"
            android:scrollIndicators="end"
            android:fadeScrollbars="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/birthday_title_tv"
                    style="@style/TextView.PrimaryAlfa50.Regular.Size15"
                    android:layout_marginStart="18sp"
                    android:text="@string/birthday_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/birthday_date_body"
                    style="@style/TextView.Primary.Regular.Size15"
                    android:layout_width="0dp"
                    android:maxLines="4"
                    android:textAlignment="viewEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@id/birthday_date_body"
                    tools:text="17.02.1997" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_number_title_tv"
                    style="@style/TextView.PrimaryAlfa50.Regular.Size15"
                    android:layout_marginStart="18sp"
                    android:layout_marginTop="13dp"
                    android:text="@string/phone_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birthday_date_body" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_number_body"
                    style="@style/TextView.Primary.Regular.Size15"
                    android:layout_width="0dp"
                    android:maxLines="4"
                    android:textAlignment="viewEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@id/phone_number_title_tv"
                    tools:text="099 999 999" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email_title_tv"
                    style="@style/TextView.PrimaryAlfa50.Regular.Size15"
                    android:layout_marginStart="18sp"
                    android:layout_marginTop="13dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_number_body" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email_body"
                    style="@style/TextView.Primary.Regular.Size15"
                    android:layout_width="0dp"
                    android:maxLines="4"
                    android:textAlignment="viewEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@id/email_title_tv"
                    tools:text="abc@gmail.com" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/social_card_tv"
                    style="@style/TextView.PrimaryAlfa50.Regular.Size15"
                    android:layout_marginStart="18sp"
                    android:layout_marginTop="13dp"
                    android:text="@string/social_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_body" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/social_card_body"
                    style="@style/TextView.Primary.Regular.Size15"
                    android:layout_width="0dp"
                    android:maxLines="4"
                    android:textAlignment="viewEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@id/social_card_tv"
                    tools:text="2640775439" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>